Add docker/compose with README instruction
