# docs/swagger.json
@@ -10,6 +10,45 @@
     "host": "localhost:8080",
     "paths": {
         "/movie": {
+            "get": {
+                "description": "Get movie list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "movie"
+                ],
+                "summary": "Show movie list",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.MovieList"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create movie",
                 "consumes": [
@@ -37,7 +76,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.MovieResponse"
+                            "$ref": "#/definitions/models.Movie"
                         }
                     },
                     "400": {
@@ -96,7 +135,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MovieResponse"
+                            "$ref": "#/definitions/models.Movie"
                         }
                     },
                     "404": {
@@ -143,7 +182,7 @@
                     "204": {
                         "description": "No Content",
                         "schema": {
-                            "$ref": "#/definitions/models.MovieResponse"
+                            "$ref": "#/definitions/models.Movie"
                         }
                     },
                     "404": {
@@ -200,7 +239,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MovieResponse"
+                            "$ref": "#/definitions/models.Movie"
                         }
                     },
                     "400": {
@@ -234,6 +273,45 @@
             }
         },
         "/user": {
+            "get": {
+                "description": "Get user list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Show user list",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UserDataList"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create user",
                 "consumes": [
@@ -261,7 +339,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.UserDataResponse"
+                            "$ref": "#/definitions/models.UserData"
                         }
                     },
                     "400": {
@@ -320,7 +398,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserDataResponse"
+                            "$ref": "#/definitions/models.UserData"
                         }
                     },
                     "404": {
@@ -367,7 +445,7 @@
                     "204": {
                         "description": "No Content",
                         "schema": {
-                            "$ref": "#/definitions/models.UserDataResponse"
+                            "$ref": "#/definitions/models.UserData"
                         }
                     },
                     "404": {
@@ -424,7 +502,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserDataResponse"
+                            "$ref": "#/definitions/models.UserData"
                         }
                     },
                     "400": {
@@ -482,7 +560,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.FavoriteMovieListResponse"
+                            "$ref": "#/definitions/models.FavoriteMovieList"
                         }
                     },
                     "404": {
@@ -538,7 +616,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.FavoriteMovieResponse"
+                            "$ref": "#/definitions/models.FavoriteMovie"
                         }
                     },
                     "404": {
@@ -592,7 +670,7 @@
                     "204": {
                         "description": "No Content",
                         "schema": {
-                            "$ref": "#/definitions/models.FavoriteMovieResponse"
+                            "$ref": "#/definitions/models.FavoriteMovie"
                         }
                     },
                     "404": {
@@ -640,26 +718,29 @@
                 }
             }
         },
-        "models.FavoriteMovieListResponse": {
-            "type": "object",
-            "properties": {
-                "movie_list": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.FavoriteMovieResponse"
-                    }
-                }
-            }
-        },
-        "models.FavoriteMovieResponse": {
+        "models.FavoriteMovie": {
             "type": "object",
             "properties": {
                 "movie_id": {
                     "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
                 }
             }
         },
-        "models.MovieResponse": {
+        "models.FavoriteMovieList": {
+            "type": "object",
+            "properties": {
+                "favorite_movie_list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.FavoriteMovie"
+                    }
+                }
+            }
+        },
+        "models.Movie": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -673,6 +754,17 @@
                 },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "models.MovieList": {
+            "type": "object",
+            "properties": {
+                "movie_list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Movie"
+                    }
                 }
             }
         },
@@ -698,13 +790,10 @@
                 }
             }
         },
-        "models.UserDataResponse": {
+        "models.UserData": {
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "string"
-                },
-                "id": {
                     "type": "string"
                 },
                 "login": {
@@ -712,6 +801,20 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "user_data": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserDataList": {
+            "type": "object",
+            "properties": {
+                "user_list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.UserData"
+                    }
                 }
             }
         }
