# models/movie.go
@@ -7,36 +7,14 @@ import (
 )
 
 type Movie struct {
-	ID          uuid.UUID `json:"id"`
-	Title       string    `json:"title"`
-	AmountMarks int       `json:"amount_marks"`
-	TotalMark   int       `json:"total_mark"`
-	Rating      float32   `json:"rating"`
-	CreatedAt   time.Time `json:"created_at"`
-}
-
-func (m *Movie) ToResponse() MovieResponse {
-	return MovieResponse{
-		ID:        m.ID,
-		Title:     m.Title,
-		Rating:    m.Rating,
-		CreatedAt: m.CreatedAt,
-	}
+	ID        uuid.UUID `json:"id"`
+	Title     string    `json:"title"`
+	Rating    float32   `json:"rating"`
+	CreatedAt time.Time `json:"created_at"`
 }
 
 type MovieList struct {
 	MovieList []Movie `json:"movie_list"`
-}
-
-func (ml *MovieList) ToResponse() MovieListResponse {
-	movieListResponse := []MovieResponse{}
-
-	for _, movie := range ml.MovieList {
-		movieListResponse = append(movieListResponse, movie.ToResponse())
-	}
-	return MovieListResponse{
-		MovieList: movieListResponse,
-	}
 }
 
 type CreateMovieRequest struct {
@@ -45,15 +23,4 @@ type CreateMovieRequest struct {
 
 type UpdateMovieRequest struct {
 	Title *string `json:"title"`
-}
-
-type MovieResponse struct {
-	ID        uuid.UUID `json:"id"`
-	Title     string    `json:"title"`
-	Rating    float32   `json:"rating"`
-	CreatedAt time.Time `json:"created_at"`
-}
-
-type MovieListResponse struct {
-	MovieList []MovieResponse `json:"movie_list"`
 }
