# models/user_data.go
@@ -1,26 +1,20 @@
 package models
 
 import (
-	"time"
-
 	"github.com/google/uuid"
+	"time"
 )
 
 type UserData struct {
-	ID        uuid.UUID `json:"id"`
+	ID        uuid.UUID `json:"user_data"`
 	Name      string    `json:"name"`
 	Login     string    `json:"login"`
-	Password  string    `json:"password"`
+	Password  string    `json:"-"`
 	CreatedAt time.Time `json:"created_at"`
 }
 
-func (u *UserData) ToResponse() UserDataResponse {
-	return UserDataResponse{
-		ID:        u.ID.String(),
-		Login:     u.Login,
-		Name:      u.Name,
-		CreatedAt: u.CreatedAt,
-	}
+type UserDataList struct {
+	UserList []UserData `json:"user_list"`
 }
 
 // Request structs
@@ -34,12 +28,4 @@ type UpdateUserDataRequest struct {
 	Name     *string `json:"name"`
 	Login    *string `json:"login"`
 	Password *string `json:"password"`
-}
-
-// Response structs
-type UserDataResponse struct {
-	ID        string    `json:"id"`
-	Name      string    `json:"name"`
-	Login     string    `json:"login"`
-	CreatedAt time.Time `json:"created_at"`
 }
